# shader_animator

./: .gitignore  export_presets.cfg  gif-exporter.gdextension  gif_exporter.gdextension  gif_exporter.gdextension.uid  icon.png.import  icon.svg.import  project.godot
assets/font/: QuinqueFive.ttf.import  SpaceMono-Bold.ttf.import
assets/font_atlases/: QuinqueFive-(5w-6h)-(149H-2V).png.import  atascii-(8w-8h)-(7H-49V).png.import
autoloads/: global.gd  global.gd.uid  render.gd  shader_animation_renderer.gd  shader_animation_renderer.gd.uid
exports/web/: gif_exporter.wasm  index.apple-touch-icon.png.import  index.html  index.icon.png.import  index.pck  index.png.import
gif-exporter/: Cargo.toml
gif-exporter/src/: lib.rs
libraries/release/: gif_exporter.wasm
resources/: shader_code_highlighter.tres  shader_code_highlighter_bck.tres
scenes/: mai2C93.tmp  mai80ED.tmp  main.gd  main.gd.uid  main.tscn
scenes/UI/: export_settings_UI.gd  export_settings_UI.gd.uid  render_container.gd  render_container.gd.uid  render_progress_bar.gd  render_progress_bar.gd.uid  render_settings_UI.gd  render_settings_UI.gd.uid  shader_code_edit.gd  shader_code_edit.gd.uid  shader_menu_button.gd  shader_menu_button.gd.uid  shader_option_button.gd  shader_option_button.gd.uid  shader_settings_UI.gd  shader_settings_UI.gd.uid  text_input_dialog.gd  text_input_dialog.gd.uid  view_menu_button.gd  view_menu_button.gd.uid  zoom_label.gd  zoom_label.gd.uid
scenes/render_scene/: grid.gdshader  grid.gdshader.uid  grid.tres  render_camera.gd  render_camera.gd.uid  render_rect.gd  (+3 more)
(+38 files in other folders)
